# adaptive_set_intersection_word_ram

./: .gitignore  CMakeLists.txt  README.md  buildme.sh  results_table.md  run_all_tests.sh  runme.sh  tabla_resultados.md  table_results.py
include/: fastBinaryTrie.hpp  fastTrieIntersection.hpp  flatBinTrie.hpp  parallel_for.hpp  parallel_for_macos.hpp  utils.hpp  wBTrieIntersection.hpp  wBinaryTrie.hpp  x2WBTrieIntersection.hpp  x2WBinaryTrie.hpp  x2WRBTrieIntersection.hpp  x2WRBinaryTrie.hpp  x2WTBTrieIntersection.hpp  x2WTBinaryTrie.hpp  x2WTRBTrieIntersection.hpp  x2WTRBinaryTrie.hpp  x3WRBTrieIntersection.hpp  x3WRBinaryTrie.hpp  x3WTRBTrieIntersection.hpp  x3WTRBinaryTrie.hpp  xFastBinaryTrie.hpp  xFastTrieIntersection.hpp  xRFastBinaryTrie.hpp  xRFastBinaryTrie3W.hpp  xRFastTrie3WIntersection.hpp  xRFastTrieIntersection.hpp  xTFastBinaryTrie.hpp  xTFastTrieIntersection.hpp  xTRFastBinaryTrie.hpp  xTRFastBinaryTrie3W.hpp  xTRFastTrie3WIntersection.hpp  xTRFastTrieIntersection.hpp
outputs/: Btrie_CC-News.csv  Btrie_ClueWeb09.csv  Btrie_Gov2.csv  NPx2WRBtrie_Gov2.csv  NPx3WTRBtrie_Gov2.csv  plot_script_CC-News.gp  plot_script_ClueWeb09.gp  plot_script_Gov2.gp  wBtrie_CC-News.csv  wBtrie_ClueWeb09.csv  wBtrie_Gov2.csv  x2WRBtrie_Gov2.csv  x2WTRBtrie_CC-News.csv  x3WRBtrie_Gov2.csv  x3WTRBtrie_Gov2.csv
scripts/: results_table.md  scriptBtrie.txt  scriptx2WBtrie.txt  scriptx2WRBtrie.txt  scriptx2WTRBtrie.txt  scriptx3WRBtrie.txt  scriptx3WTRBtrie.txt  test_Btrie.sh  test_wBtrie.sh  test_x2WBtrie.sh  test_x2WRBtrie.sh  test_x2WTRBtrie.sh  test_x3WRBtrie.sh  test_x3WTRBtrie.sh
src/: fastTrieIntersection.cpp  wBTrieIntersection.cpp  x2WBTrieIntersection.cpp  x2WRBTrieIntersection.cpp  x2WTBTrieIntersection.cpp  x2WTRBTrieIntersection.cpp  x3WRBTrieIntersection.cpp  x3WTRBTrieIntersection.cpp  xFastTrieIntersection.cpp  xRFastTrie3WIntersection.cpp  xRFastTrieIntersection.cpp  xTFastTrieIntersection.cpp  xTRFastTrie3WIntersection.cpp  xTRFastTrieIntersection.cpp
test/: CMakeLists.txt  results_table.cpp  table_results.cpp  test_Btries.cpp  test_intersection_fastTrie.cpp  test_wBtries.cpp  test_x2WBtries.cpp  test_x2WRBtries.cpp  test_x2WTRBtries.cpp  test_x3WRBtries.cpp  test_x3WTRBtries.cpp  test_xfastTrie.cpp  test_xrfastTrie.cpp  test_xrfastTrie3W.cpp  test_xrtfastTrie.cpp  test_xtfastTrie.cpp  test_xtfastTrie_da.cpp
tools/: CMakeLists.txt  build_BTries.cpp  build_fastTries.cpp  build_wBTries.cpp  build_x2WBTries.cpp  build_x2WRBTries.cpp  build_x2WTRBTries.cpp  build_x2WTTries.cpp  build_x3WRBTrie.cpp  build_x3WTRBTries.cpp  build_xfastTries.cpp  build_xrfastTrie3W.cpp  build_xrfastTries.cpp  build_xtfastTries.cpp  build_xtfastTries_da.cpp  build_xtrfastTries.cpp  build_xtrfastTries3W.cpp  intersection_query_log.cpp  intersection_querylog_BTrie.cpp  intersection_querylog_fastTrie.cpp  intersection_querylog_wBTrie.cpp  intersection_querylog_x2WBTrie.cpp  intersection_querylog_x2WRBTrie.cpp  intersection_querylog_x2WTBTrie.cpp  intersection_querylog_x2WTRBTrie.cpp  intersection_querylog_x3WRBTrie.cpp  intersection_querylog_x3WTRBTrie.cpp  intersection_querylog_xFastTrie.cpp  intersection_querylog_xRFastTrie.cpp  intersection_querylog_xRFastTrie3W.cpp  intersection_querylog_xTFastTrie.cpp  intersection_querylog_xTRFastTrie.cpp  intersection_querylog_xTRFastTrie3W.cpp
