add_executable(test_encoding test_encoding.cpp)
add_executable(test_fastTrie test_fastTrie.cpp)
add_executable(test_xfastTrie test_xfastTrie.cpp)
add_executable(test_xrfastTrie test_xrfastTrie.cpp)
add_executable(test_xtfastTrie test_xtfastTrie.cpp)
add_executable(test_xrtfastTrie test_xrtfastTrie.cpp)
add_executable(test_intersection test_intersection.cpp)
add_executable(test_xrfastTrie3W test_xrfastTrie3W.cpp)
add_executable(test_intersection_fastTrie test_intersection_fastTrie.cpp)

target_link_libraries(test_encoding PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(test_fastTrie PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(test_xfastTrie PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(test_xrfastTrie PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(test_xtfastTrie PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(test_xrtfastTrie PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(test_xrfastTrie3W PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(test_intersection_fastTrie PUBLIC sdsl divsufsort divsufsort64 pthread fastTrieIntersection)
target_link_libraries(test_intersection PUBLIC sdsl divsufsort divsufsort64 pthread intersection)