add_executable(test_wBtries test_wBtries.cpp)
add_executable(test_x2WBtries test_x2WBtries.cpp)
add_executable(test_x2WRBtries test_x2WRBtries.cpp)
add_executable(test_x2WTRBtries test_x2WTRBtries.cpp)
add_executable(test_x3WRBtries test_x3WRBtries.cpp)
add_executable(test_x3WTRBtries test_x3WTRBtries.cpp)
add_executable(table_results table_results.cpp)

target_link_libraries(test_wBtries PUBLIC wBTrieIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(test_x2WBtries PUBLIC x2WBTrieIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(test_x2WRBtries PUBLIC x2WRBTrieIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(test_x2WTRBtries PUBLIC x2WTRBTrieIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(test_x3WRBtries PUBLIC x3WRBTrieIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(test_x3WTRBtries PUBLIC x3WTRBTrieIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(table_results PUBLIC  divsufsort divsufsort64)