add_executable(build build_tries.cpp)
add_executable(queries intersection_query_log.cpp)
add_executable(build_fastTries build_fastTries.cpp)
add_executable(build_xfastTries build_xfastTries.cpp)
add_executable(build_xrfastTries build_xrfastTries.cpp)
add_executable(build_xtfastTries build_xtfastTries.cpp)
add_executable(build_xtrfastTries build_xtrfastTries.cpp)
add_executable(build_xrfastTrie3W build_xrfastTrie3W.cpp)
add_executable(build_xtrfastTries3W build_xtrfastTries3W.cpp)
add_executable(intersection_querylog_fastTrie intersection_querylog_fastTrie.cpp)
add_executable(intersection_querylog_xFastTrie intersection_querylog_xFastTrie.cpp)
add_executable(intersection_querylog_xRFastTrie intersection_querylog_xRFastTrie.cpp)
add_executable(intersection_querylog_xTFastTrie intersection_querylog_xTFastTrie.cpp)
add_executable(intersection_querylog_xTRFastTrie intersection_querylog_xTRFastTrie.cpp)
add_executable(intersection_querylog_xRFastTrie3W intersection_querylog_xRFastTrie3W.cpp)
add_executable(intersection_querylog_xTRFastTrie3W intersection_querylog_xTRFastTrie3W.cpp)

target_link_libraries(queries PUBLIC intersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(intersection_querylog_fastTrie PUBLIC fastTrieIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(intersection_querylog_xFastTrie PUBLIC xFastTrieIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(intersection_querylog_xRFastTrie PUBLIC xRFastTrieIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(intersection_querylog_xTFastTrie PUBLIC xTFastTrieIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(intersection_querylog_xTRFastTrie PUBLIC xTRFastTrieIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(intersection_querylog_xRFastTrie3W PUBLIC xRFastTrie3WIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(intersection_querylog_xTRFastTrie3W PUBLIC xTRFastTrie3WIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(build PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(build_fastTries PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(build_xfastTries PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(build_xrfastTries PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(build_xtfastTries PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(build_xtrfastTries PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(build_xrfastTrie3W PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(build_xtrfastTries3W PUBLIC sdsl divsufsort divsufsort64)

