add_executable(build_BTries build_BTries.cpp)
add_executable(build_wBTries build_wBTries.cpp)
add_executable(build_x2WBTries build_x2WBTries.cpp)
add_executable(build_x2WRBTries build_x2WRBTries.cpp)
add_executable(build_x2WTTries build_x2WTTries.cpp)
add_executable(build_x2WTRBTries build_x2WTRBTries.cpp)
add_executable(build_x3WRBTrie build_x3WRBTrie.cpp)
add_executable(build_x3WTRBTries build_x3WTRBTries.cpp)
add_executable(intersection_querylog_BTries intersection_querylog_BTrie.cpp)
add_executable(intersection_querylog_wBTries intersection_querylog_wBTrie.cpp)
add_executable(intersection_querylog_x2WBTries intersection_querylog_x2WBTrie.cpp)
add_executable(intersection_querylog_x2WRBTries intersection_querylog_x2WRBTrie.cpp)
add_executable(intersection_querylog_x2WTBTries intersection_querylog_x2WTBTrie.cpp)
add_executable(intersection_querylog_x2WTRBTries intersection_querylog_x2WTRBTrie.cpp)
add_executable(intersection_querylog_x3WRBTries intersection_querylog_x3WRBTrie.cpp)
add_executable(intersection_querylog_x3WTRBTries intersection_querylog_x3WTRBTrie.cpp)

target_link_libraries(intersection_querylog_BTries PUBLIC intersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(intersection_querylog_wBTries PUBLIC wBTrieIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(intersection_querylog_x2WBTries PUBLIC x2WBTrieIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(intersection_querylog_x2WRBTries PUBLIC x2WRBTrieIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(intersection_querylog_x2WTBTries PUBLIC x2WTBTrieIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(intersection_querylog_x2WTRBTries PUBLIC x2WTRBTrieIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(intersection_querylog_x3WRBTries PUBLIC x3WRBTrieIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(intersection_querylog_x3WTRBTries PUBLIC x3WTRBTrieIntersection pthread sdsl divsufsort divsufsort64)
target_link_libraries(build_BTries PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(build_wBTries PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(build_x2WBTries PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(build_x2WRBTries PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(build_x2WTTries PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(build_x2WTRBTries PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(build_x3WRBTrie PUBLIC sdsl divsufsort divsufsort64)
target_link_libraries(build_x3WTRBTries PUBLIC sdsl divsufsort divsufsort64)

